avoid scrollbar while filter menu is collapsing open

--- a/app/styles/_filter-menu.scss
+++ b/app/styles/_filter-menu.scss
@@ -44,7 +44,7 @@
 .filter-menu__header-text {
   margin: 8px 16px;
 }
-.filter-menu__content {
+.filter-menu__content.in {
   overflow-y: auto;
 }
 .filter-menu__content {
